# poc-mixr

./: .gitignore  CLAUDE.md  Makefile  README.md  apaga.txt  conanfile.py  meson.build  meson_options.txt
BehaviorTree.CPP/.github/workflows/: pixi.yaml
build-release/conan/: conan_meson_native.ini  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  expat.pc  jsbsim.pc  mixr-base.pc  mixr-interop_common.pc  mixr-interop_dis.pc  mixr-linearsystem.pc  mixr-linkage.pc  mixr-models.pc  mixr-recorder.pc  mixr-simulation.pc  mixr-terrain.pc  mixr.pc  openrti.pc  protobuf.pc  protobuf_full_package-libprotoc.pc  protobuf_full_package.pc  zlib.pc
config/: sim.edl
config/mainSim1/configs/: test0.epp
examples/: meson.build
examples/tutorial01/: meson.build
examples/tutorial02/: meson.build
examples/tutorial03/: main.cpp  meson.build  tutorial03.edl
examples/tutorial04/: main.cpp  meson.build
examples/tutorial05/: main.cpp  meson.build
examples/tutorial06/: main.cpp  meson.build
include/poc/: AcmiWriter.hpp  MyAircraft.hpp  MyDynamics.hpp  MyNavigation.hpp  MyRadar.hpp  MySimulation.hpp  MyStation.hpp  factory.hpp
poc/01-flying-aircraft/configs/: scenario.epp
poc/01-flying-aircraft/src/: main.cpp  meson.build
poc/02-behavior-tree/configs/: tree.xml
poc/02-behavior-tree/src/: main.cpp  meson.build
poc/03-bt-autopilot/configs/: mission.xml  scenario.epp
poc/03-bt-autopilot/include/: mixr_factory.hpp
poc/03-bt-autopilot/include/bt/: bt_factory.hpp
poc/03-bt-autopilot/include/bt/nodes/: FuelLowCondition.hpp  PatrolAction.hpp  ReturnToBaseAction.hpp
poc/03-bt-autopilot/include/domain/: Mission.hpp
poc/03-bt-autopilot/src/: main.cpp  meson.build  mixr_factory.cpp
poc/03-bt-autopilot/src/bt/: bt_factory.cpp
poc/03-bt-autopilot/src/bt/nodes/: FuelLowCondition.cpp  PatrolAction.cpp  ReturnToBaseAction.cpp
poc/03-bt-autopilot/src/domain/: Mission.cpp
poc/04-jsbsim-6dof/: meson.build
poc/04-jsbsim-6dof/configs/: scenario.epp
poc/04-jsbsim-6dof/include/tacview/: RealtimeTelemetryServer.hpp
poc/04-jsbsim-6dof/src/: main.cpp  meson.build
poc/04-jsbsim-6dof/src/tacview/: RealtimeTelemetryServer.cpp
poc/05-formation-flight/: .gitignore
poc/05-formation-flight/configs/: channel_map.hpp  linkage.epp  recorder.epp  rtb_route.epp  scenario.epp.in  wingman_tree.xml
poc/05-formation-flight/data/recordings/: .gitkeep  mission.csv_v01  mission.csv_v02  mission.csv_v03  mission.csv_v04  mission.csv_v05  mission.csv_v06  mission.dat_v02  mission.dat_v03  mission.dat_v04  mission.dat_v05  mission.dat_v06
poc/05-formation-flight/include/: formations.hpp  mixr_factory.hpp  recorder_events.hpp
poc/05-formation-flight/include/bt/: bt_factory.hpp
poc/05-formation-flight/include/bt/nodes/: FollowFormationAction.hpp  RtbEngagedCondition.hpp
poc/05-formation-flight/include/linkage/: KeyboardDevice.hpp  KeyboardIoHandler.hpp
poc/05-formation-flight/src/: formations.cpp  main.cpp  meson.build  mixr_factory.cpp
poc/05-formation-flight/src/bt/: bt_factory.cpp
poc/05-formation-flight/src/bt/nodes/: FollowFormationAction.cpp  RtbEngagedCondition.cpp
poc/05-formation-flight/src/linkage/: KeyboardDevice.cpp  KeyboardIoHandler.cpp
poc/06-radar-detection/: .gitignore
poc/06-radar-detection/configs/: scenario.epp
poc/06-radar-detection/src/: main.cpp  meson.build
poc/07-radar-intercept/: .gitignore
poc/07-radar-intercept/configs/: scenario.epp
poc/07-radar-intercept/data/recordings/: .gitkeep
poc/07-radar-intercept/src/: main.cpp  meson.build
poc/07-radar-intercept/src/tacview/: RealtimeTelemetryServer.cpp
poc/08-event-relay/configs/: gainPattern.epp  scenario.epp
poc/08-event-relay/data/recordings/: .gitkeep
poc/08-event-relay/include/: AlertReceiver.hpp  RadarContactRelay.hpp  events.hpp  mixr_factory.hpp
poc/08-event-relay/include/tacview/: RealtimeTelemetryServer.hpp
poc/08-event-relay/src/: AlertReceiver.cpp  RadarContactRelay.cpp  events.cpp  main.cpp  meson.build  mixr_factory.cpp
poc/09-chaff-flare/: .gitignore
poc/09-chaff-flare/configs/: scenario.epp
poc/09-chaff-flare/include/tacview/: RealtimeTelemetryServer.hpp
poc/09-chaff-flare/src/: main.cpp  meson.build
poc/09-chaff-flare/src/tacview/: RealtimeTelemetryServer.cpp
poc/10-satellite-constellation/configs/: scenario.epp
poc/10-satellite-constellation/include/: orbit.hpp
poc/10-satellite-constellation/src/: main.cpp  meson.build  orbit.cpp
poc/10-satellite-constellation/src/tacview/: RealtimeTelemetryServer.cpp
src/: main.cpp  meson.build
src/dynamics/: MyDynamics.cpp
src/factory/: factory.cpp
src/navigation/: MyNavigation.cpp
src/player/: MyAircraft.cpp
src/sensor/: MyRadar.cpp
src/simulation/: MySimulation.cpp
src/station/: MyStation.cpp
src/tacview/: AcmiWriter.cpp
